# soundchip

./: .gitignore  Makefile.am  configure.ac  default.json  do-sfx.sh  large.json  main.c  soundchip.c  soundchip.h
m4/: libev.m4
t/: .gitignore  Makefile.am  basic.c
tools/: dat2png.pl  json2c.pl
